Offerings not showing issue resolved

--- a/src/app/Components/home/investors/investors.component.scss
+++ b/src/app/Components/home/investors/investors.component.scss
@@ -1,5 +1,5 @@
 .investors {
-  width: 1400px;
+  // width: 1400px;
   margin: 0px auto;
 }
 
